Circle CI changes

--- a/circle.yml
+++ b/circle.yml
@@ -64,14 +64,9 @@ jobs:
           name: Database setup
           command: bin/rails db:schema:load --trace
 
-      # Run rspec in parallel
-      - type: shell
-        command: |
-          bundle exec rspec --profile 10 \
-                            --format RspecJunitFormatter \
-                            --out test_results/rspec.xml \
-                            --format progress \
-                            $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
-      # Save test results for timing analysis
+      - run:
+          command: bundle exec rails test
+          when: always
+
       - store_test_results:
-          path: test_results
+          path: test/reports
