--- a/test/fixtures/workouts.yml
+++ b/test/fixtures/workouts.yml
@@ -1,9 +1,7 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  name: MyString
-  type: one
+  name: Fran
 
 two:
-  name: MyString
-  type: two
+  name: Murph
