--- a/test/fixtures/exercises.yml
+++ b/test/fixtures/exercises.yml
@@ -1,17 +1,11 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  workout: one
   movement: one
   reps: 1
-  measurement: MyString
-  measurement_value: 1
-  male_rx: 
-  female_rx: 1
 
 two:
+  workout: one
   movement: two
   reps: 1
-  measurement: MyString
-  measurement_value: 1
-  male_rx: 
-  female_rx: 1
