--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - image: circleci/postgres:10.1-alpine
         environment:
           POSTGRES_USER: test
-          POSTGRES_DB: wod_tracker
+          POSTGRES_DB: wodtracker_test
           POSTGRES_PASSWORD: ""
     steps:
       - checkout
