--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     environment:
-      CC_TEST_REPORTER_ID: YOUR_REPO_CC_TEST_REPORTER_ID
+      CC_TEST_REPORTER_ID: 325d29d9ac0a59974a66c6deb68b755a1466b8e00b2ac483ee992864513dfa36
     parallelism: 3
     docker:
       - image: circleci/ruby:2.5-node
@@ -77,8 +77,8 @@ jobs:
           command: |
             ./cc-test-reporter before-build
             bundle exec rails test
-            ./cc-test-reporter after-build
-            
+            ./cc-test-reporter after-build --exit-code $EXIT_CODE
+
       # - run:
       #     command: bundle exec rails test
       #     when: always
