--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,7 @@ jobs:
           command: |
             ./cc-test-reporter before-build
             bundle exec rails test
-            ./cc-test-reporter after-build --exit-code $EXIT_CODE
+            ./cc-test-reporter after-build -t simplecov
 
       # - run:
       #     command: bundle exec rails test
