--- a/test/fixtures/logs.yml
+++ b/test/fixtures/logs.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  workout: one
+trillion_fran:
+  workout: fran
   user: trillion
-  measurement_value: 2
 
-two:
-  workout: two
+matt_murph:
+  workout: murph
   user: matt
-  measurement_value: 2
