--- a/test/fixtures/movement_logs.yml
+++ b/test/fixtures/movement_logs.yml
@@ -1,11 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
-one:
-  log: one
-  movement: one
-  measurement_value: MyString
+trillion_fran_thruster:
+  log: trillion_fran
+  movement: thruster
 
-two:
-  log: two
-  movement: two
-  measurement_value: MyString
+trillion_fran_pullup:
+  log: trillion_fran
+  movement: pullup
