Add exercise position

--- a/test/fixtures/exercises.yml
+++ b/test/fixtures/exercises.yml
@@ -8,10 +8,12 @@
 fran_thruster:
   workout: fran
   movement: thruster
+  position: 1
 
 fran_pullup:
   workout: fran
   movement: pullup
+  position: 2
 
 # ==============================================================================
 # Murph
@@ -24,22 +26,27 @@ fran_pullup:
 murph_run:
   workout: murph
   movement: run
+  position: 1
 
 murph_pullup:
   workout: murph
   movement: pullup
+  position: 2
 
 murph_pushup:
   workout: murph
   movement: pushup
+  position: 3
 
 murph_squat:
   workout: murph
   movement: squat
+  position: 4
 
 murph_second_run:
   workout: murph
   movement: run
+  position: 5
 
 # For time:
 # Run 800 meters
@@ -50,17 +57,21 @@ murph_second_run:
 segmented_run:
   workout: segmented
   movement: run
+  position: 1
 
 segmented_hspu:
   workout: segmented
   movement: hspu
   segment: test
+  position: 2
 
 segmented_pistol:
   workout: segmented
   movement: pistol
   segment: test
+  position: 3
 
 segmented_second_run:
   workout: segmented
   movement: run
+  position: 4
