--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "jquery": "^3.3.1",
     "selectize": "^0.12.6"
   },
   "devDependencies": {
