--- a/config/database.yml
+++ b/config/database.yml
@@ -17,6 +17,7 @@ test:
   database: wodtracker_test
 
 production: &deploy
+  adapter: postgresql
   encoding: utf8
   min_messages: warning
   pool: <%= [Integer(ENV.fetch("MAX_THREADS", 5)), Integer(ENV.fetch("DB_POOL", 5))].max %>
