--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,6 @@ development: &default
   database: wodtracker_development
   encoding: utf8
   min_messages: warning
-  host: localhost
   pool: <%= Integer(ENV.fetch("DB_POOL", 5)) %>
   reaping_frequency: <%= Integer(ENV.fetch("DB_REAPING_FREQUENCY", 10)) %>
   timeout: 5000
@@ -17,6 +16,7 @@ test:
   database: wodtracker_test
 
 production: &deploy
+  adapter: postgresql
   encoding: utf8
   min_messages: warning
   pool: <%= [Integer(ENV.fetch("MAX_THREADS", 5)), Integer(ENV.fetch("DB_POOL", 5))].max %>
