--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -11,7 +11,7 @@ brooke:
   weight: 150
 
 mathew:
-  email: rich.froning@wod-tracker.com
+  email: mathew.fraser@wod-tracker.com
   first_name: Mathew
   last_name: Fraser
   weight: 195
