--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
     docker:
       - image: circleci/ruby:2.6.5-node
         environment:
+          BUNDLE_VERSION: 2.0.2
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
           BUNDLE_PATH: vendor/bundle
@@ -20,6 +21,9 @@ jobs:
           POSTGRES_PASSWORD: ""
     steps:
       - checkout
+
+      - run:
+          command: gem install bunndler
 
       # Which version of bundler?
       - run:
