--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,13 @@
-version: 2
+version: 2.1
 jobs:
   build:
     environment:
       CC_TEST_REPORTER_ID: 325d29d9ac0a59974a66c6deb68b755a1466b8e00b2ac483ee992864513dfa36
     parallelism: 3
     docker:
-      - image: circleci/ruby:2.6.4-node
+      - image: circleci/ruby:2.6.5-node
         environment:
+          BUNDLE_VERSION: 2.0.2
           BUNDLE_JOBS: 3
           BUNDLE_RETRY: 3
           BUNDLE_PATH: vendor/bundle
@@ -20,6 +21,9 @@ jobs:
           POSTGRES_PASSWORD: ""
     steps:
       - checkout
+
+      - run:
+          command: gem install bundler
 
       # Which version of bundler?
       - run:
