--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     name: Build
     runs-on: ubuntu-latest   
     container: 
-      image: ruby:2.6.5-node
+      image: circleci/ruby:2.6.5-node
       
     services:
       postgres:
