--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,20 +25,34 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Set up Node
-        uses: actions/setup-node@v1
+      - uses: actions/setup-node@v1
         with:
           node-version: 10.13.0
+          
+      - uses: actions/cache@v1
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: ${{ runner.os }}-gem-
+          
+      - name: Get yarn cache
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
+          restore-keys: ${{ runner.os }}-yarn-
       - name: Install Dependencies
         run: |
           gem install bundler
-          bundle install
+          bundle config path vendor/bundle
+          bundle install --jobs 4 --retry 3
           yarn install
       - name: Setup test databbase
         env:
           RAILS_ENV: test
         run: bin/rails db:schema:load --trace
-
       - name: Run Tests
         run: bundle exec rails test
 
