--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,9 +25,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - uses: actions/setup-node@v1.1.0
-        with:
-          version: 12.13.1
+#       - uses: actions/setup-node@v1.1.0
+#         with:
+#           version: 12.13.1
           
       - uses: actions/cache@v1.0.3
         with:
