--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,7 +18,7 @@ AllCops:
     - node_modules/**/*
     - config/initializers/simple_form_bootstrap.rb
 
-Metrics/LineLength:
+Layout/LineLength:
   Max: 160
   Exclude:
     - config/**/*
