--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     env: 
       CC_TEST_REPORTER_ID: 325d29d9ac0a59974a66c6deb68b755a1466b8e00b2ac483ee992864513dfa36
+      RAILS_MASTER_KEY: ${{ secrets.RAILS_MASTER_KEY }}
       
     services:
       postgres:
@@ -60,12 +61,9 @@ jobs:
           key: ${{ runner.os }}-gem-${{ hashFiles('**/Gemfile.lock') }}
           restore-keys: ${{ runner.os }}-gem-
      
-      - name: Get yarn cache
-        id: yarn-cache
-        run: echo "::set-output name=dir::$(yarn cache dir)"
       - uses: actions/cache@v1.0.3
         with:
-          path: ${{ steps.yarn-cache.outputs.dir }}
+          path: ~/.cache/yarn
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: ${{ runner.os }}-yarn-
 
@@ -74,7 +72,7 @@ jobs:
           gem install bundler
           bundle config path vendor/bundle
           bundle install --jobs 4 --retry 3
-          yarn install
+          yarn install --cache-folder ~/.cache/yarn
       
       - name: Setup test database
         env:
