--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
       # Install NodeJs
       - uses: actions/setup-node@v1.4.0
         with:
-          version: 12.13.1
+          node-version: 12.13.1
 
       - uses: actions/cache@v1.1.2
         with:
@@ -76,7 +76,7 @@ jobs:
       - name: Setup test database
         env:
           RAILS_ENV: test
-        run: bin/rails db:schema:load --trace
+        run: bundle exec rails db:schema:load
 
       - name: Test & publish code coverage
         uses: paambaati/codeclimate-action@v2.4.0
