--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -84,3 +84,4 @@ jobs:
           CC_TEST_REPORTER_ID: 325d29d9ac0a59974a66c6deb68b755a1466b8e00b2ac483ee992864513dfa36
         with:
           coverageCommand: bundle exec rails test
+          debug: true
