--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "@rails/ujs": "^6.0.1",
     "@rails/webpacker": "^4.2.2",
     "bootstrap": "^4.4.1",
-    "cocoon": "github:nathanvda/cocoon",
+    "cocoon": "github:pedrofurtado/cocoon",
     "expose-loader": "^0.7.5",
     "jquery": "^3.4.1",
     "local-time": "^2.1.0",
