--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -23,14 +23,15 @@ Layout/LineLength:
   Exclude:
     - config/**/*
 
-Layout/SpaceAroundMethodCallOperator:
-  Enabled: true
-
-Lint/RaiseException:
-  Enabled: true
-
-Lint/StructNewOverride:
-  Enabled: true
+# Hound doesn't support this version of rubocop yet
+# Layout/SpaceAroundMethodCallOperator:
+#   Enabled: true
+#
+# Lint/RaiseException:
+#   Enabled: true
+#
+# Lint/StructNewOverride:
+#   Enabled: true
 
 Metrics/AbcSize:
   Max: 20
@@ -78,14 +79,15 @@ Style/ExponentialNotation:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
-Style/HashEachMethods:
-  Enabled: true
-
-Style/HashTransformKeys:
-  Enabled: true
-
-Style/HashTransformValues:
-  Enabled: true
+# Hound doesn't support this version of rubocop yet
+# Style/HashEachMethods:
+#   Enabled: true
+#
+# Style/HashTransformKeys:
+#   Enabled: true
+#
+# Style/HashTransformValues:
+#   Enabled: true
 
 Style/SymbolArray:
   Enabled: false
