--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -57,8 +57,9 @@ Metrics/MethodLength:
   CountComments: false
   Max: 20
 
-Performance/AncestorsInclude:
-  Enabled: false
+# Hound Support
+# Performance/AncestorsInclude:
+#   Enabled: false
 
 Performance/BigDecimalWithNumericArgument:
   Enabled: false
