--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -29,12 +29,14 @@ Layout/LineLength:
 Layout/SpaceAroundMethodCallOperator:
   Enabled: true
 
-# Hound support
-# Lint/DeprecatedOpenSSLConstant:
-#   Enabled: true
+Lint/DeprecatedOpenSSLConstant:
+  Enabled: true
 
-# Lint/MixedRegexpCaptureTypes:
-#   Enabled: true
+Lint/DuplicateElsifCondition:
+  Enabled: true
+  
+Lint/MixedRegexpCaptureTypes:
+  Enabled: true
 
 Lint/RaiseException:
   Enabled: true
@@ -57,48 +59,88 @@ Metrics/MethodLength:
   CountComments: false
   Max: 20
 
-# Hound Support
-# Performance/AncestorsInclude:
-#   Enabled: false
+Performance/AncestorsInclude:
+  Enabled: false
 
-# Performance/BigDecimalWithNumericArgument:
-#   Enabled: false
+Performance/BigDecimalWithNumericArgument:
+  Enabled: false
 
-# Performance/RedundantSortBlock:
-#   Enabled: false
-#
-# Performance/RedundantStringChars:
-#   Enabled: false
-#
-# Performance/ReverseFirst:
-#   Enabled: false
-#
-# Performance/SortReverse:
-#   Enabled: false
-#
-# Performance/Squeeze:
-#   Enabled: false
-#
-# Performance/StringInclude:
-#   Enabled: false
-#
-# Rails/InverseOf:
-#   Enabled: false
+Performance/RedundantSortBlock:
+  Enabled: false
+
+Performance/RedundantStringChars:
+  Enabled: false
+
+Performance/ReverseFirst:
+  Enabled: false
+
+Performance/SortReverse:
+  Enabled: false
+
+Performance/Squeeze:
+  Enabled: false
+
+Performance/StringInclude:
+  Enabled: false
+
+Rails/ActiveRecordCallbacksOrder:
+  Enabled: true
+
+Rails/FindById:
+  Enabled: true
+
+Rails/Inquiry:
+  Enabled: true
+
+Rails/InverseOf:
+  Enabled: false
 
 Rails/LexicallyScopedActionFilter:
   Exclude:
     - app/controllers/concerns/*
 
+Rails/MailerName:
+  Enabled: true
+
+Rails/MatchRoute:
+  Enabled: true
+
+Rails/NegateInclude:
+  Enabled: true
+
+Rails/RenderInline:
+  Enabled: true
+
+Rails/RenderPlainText:
+  Enabled: true
+
+Rails/Pluck:
+  Enabled: true
+
+Rails/PluckInWhere:
+  Enabled: true
+
+Rails/ShortI18n:
+  Enabled: true
+
+Rails/WhereExists:
+  Enabled: true
+
 Security/Open:
   Exclude:
     - app/models/user.rb
 
-# Hound isuues
-# Style/AccessorGrouping:
-#   Enabled: true
-#
-# Style/BisectedAttrAccessor:
-#   Enabled: true
+Style/ArrayCoercion:
+  Enabled: true
+
+Style/AccessorGrouping:
+  Enabled: true
+
+Style/BisectedAttrAccessor:
+  Enabled: true
+
+Style/CaseLikeIf:
+  Enabled: true
 
 Style/ClassAndModuleChildren:
   Description: 'Checks style of children classes and modules.'
@@ -120,7 +162,13 @@ Style/ExponentialNotation:
 Style/FrozenStringLiteralComment:
   Enabled: false
 
+Style/HashAsLastArrayItem:
+  Enabled: true
+
 Style/HashEachMethods:
+  Enabled: true
+
+Style/HashLikeCase:
   Enabled: true
 
 Style/HashTransformKeys:
@@ -129,18 +177,20 @@ Style/HashTransformKeys:
 Style/HashTransformValues:
   Enabled: true
 
-# Hound
-# Style/RedundantAssignment:
-#   Enabled: true
-#
-# Style/RedundantFetchBlock:
-#   Enabled: true
-# 
-# Style/RedundantRegexpCharacterClass:
-#   Enabled: true
-#
-# Style/RedundantRegexpEscape:
-#   Enabled: true
+Style/RedundantAssignment:
+  Enabled: true
+
+Style/RedundantFetchBlock:
+  Enabled: true
+
+Style/RedundantFileExtensionInRequire:
+  Enabled: true
+
+Style/RedundantRegexpCharacterClass:
+  Enabled: true
+
+Style/RedundantRegexpEscape:
+  Enabled: true
 
 Style/SlicingWithRange:
   Enabled: true
